# didcomm-mediator-rs

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  alert.rules.yml  alertmanager.yml  did.json  discord-template-configmap.yaml  docker-compose.yml  load-test.yml  mediator-service.yaml  mediator_didoc.json  mongodb-service.yaml  nextest.toml  oob_invitation.txt  prometheus.yaml  prometheus.yml  qrcode.txt  run_test.sh  steps.md  test.rs  test.sh
.cargo/: config.toml
crates/database/: Cargo.toml  README.md
crates/database/src/: data_storage.rs  database.rs  lib.rs
crates/keystore/: Cargo.toml  README.md  keystore.rs  security_service.rs
crates/keystore/src/: backend.rs  encryptor.rs  error.rs  errors.rs  filesystem.rs  lib.rs  repository.rs  secure_key.rs  tests.rs
crates/keystore/src/encryptor/: aws_kms.rs  plaintext.rs
crates/keystore/src/repository/: aws.rs  mongodb.rs  no_repo.rs
crates/plugin-api/: Cargo.toml  README.md
crates/plugin-api/src/: lib.rs
crates/plugins/did-endpoint/: Cargo.toml  README.md
crates/plugins/did-endpoint/src/: didgen.rs  lib.rs  plugin.rs  util.rs  web.rs
crates/plugins/forward/: Cargo.toml
crates/plugins/mediator-coordination/: Cargo.toml
crates/plugins/mediator-coordination/src/: constant.rs  lib.rs  plugin.rs
crates/plugins/message-pickup/: Cargo.toml
crates/plugins/message-pickup/src/: constants.rs  lib.rs  model.rs  web.rs
crates/plugins/shared/: Cargo.toml
crates/plugins/shared/src/: constants.rs  lib.rs  repository.rs  resolvers.rs  state.rs  test_utils.rs  util.rs  utils.rs
crates/web-plugins/did-endpoint/: Cargo.toml  README.md
crates/web-plugins/did-endpoint/src/: didgen.rs  lib.rs  persistence.rs  plugin.rs  util.rs  web.rs
crates/web-plugins/didcomm-messaging/: Cargo.toml  README.md
crates/web-plugins/didcomm-messaging/did-utils/: Cargo.toml  README.md
crates/web-plugins/didcomm-messaging/keystore/: Cargo.toml
crates/web-plugins/didcomm-messaging/mediator-coordination/: Cargo.toml
crates/web-plugins/didcomm-messaging/message-api/: Cargo.toml  README.md
crates/web-plugins/didcomm-messaging/pickup/: Cargo.toml
crates/web-plugins/didcomm-messaging/protocol-manager/: Cargo.toml
crates/web-plugins/didcomm-messaging/protocols/: README.md
crates/web-plugins/didcomm-messaging/shared/: Cargo.toml  README.md
crates/web-plugins/didcomm-messaging/src/: constant.rs  constants.rs  error.rs  lib.rs  manager.rs  midlw.rs  plugin.rs  protocol.rs  protocols.rs
crates/web-plugins/health/: Cargo.toml
crates/web-plugins/health/src/: health-test.rs  health_check.rs  lib.rs  metrics.rs
crates/web-plugins/oob-messages/: Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: constants.rs  ledger.rs  main.rs
demo/src/alice_edge/: alice.rs  constants.rs  data.rs  mod.rs  secret_data.rs
demo/src/bob_edge/: bob.rs  constants.rs  data.rs  mod.rs
did-endpoint/: .env  Cargo.toml  README.md
did-endpoint/src/: didgen.rs  lib.rs  plugin.rs  web.rs
did-endpoint/src/util/: filesystem.rs  keystore.rs  mod.rs
did-utils/: Cargo.toml
did-utils/did_resolver_web/: Cargo.toml
did-utils/did_resolver_web/src/: lib.rs
did-utils/examples/: dsa-verify-with-jwk.rs  ed25519-sign.rs  multibase.rs
did-utils/src/: didcore.rs  didkit.rs  ldmodel.rs  lib.rs
did-utils/src/crypto/: alg.rs  ed25519.rs  errors.rs  format.rs  mod.rs  sha256_hash.rs  traits.rs  utils.rs  x25519.rs
did-utils/src/key/: bytes.rs  ec.rs  jwk.rs  key.rs  mod.rs  okp.rs  rsa.rs  secret.rs
did-utils/src/key_jwk/: bytes.rs  ec.rs  jwk.rs  key.rs  mod.rs  oct.rs  okp.rs  prm.rs  rsa.rs  secret.rs
did-utils/src/methods/: errors.rs  mod.rs  resolution.rs  traits.rs  utils.rs
did-utils/src/proof/: eddsa_jcs_2022.rs  mod.rs  model.rs  traits.rs
did-utils/src/vc/: mod.rs  model.rs
did-utils/test_resources/: crypto_ed25519_test_sign_verify.json  didcore_example_01_canonicalized.json  didcore_example_12_1_context_object_canonicalized.json  didcore_example_12_2_context_multiple_strings_canonicalized.json  didcore_example_12_context_object.json  didcore_example_14_canonicalized.json  didcore_example_17.json  didcore_example_18.json  didcore_example_20.json
did-utils/tests/: test_methods.rs
generic-server/: .env  .gitignore  Cargo.toml  README.md
generic-server/src/: lib.rs  main.rs
generic-server/src/plugin/: container.rs  mod.rs
generic-server/src/util/: mod.rs
generic-server/storage/: .gitignore
mediator-coordination/: .env  .env.sample  Cargo.toml  README.md
mediator-coordination/src/: constant.rs  lib.rs  plugin.rs
mediator-coordination/src/client/: dic.rs
mediator-coordination/src/didcomm/: bridge.rs
mediator-coordination/src/export/: dic.rs
mediator-coordination/src/forward/: routing.rs
mediator-coordination/src/jose/: jws.rs  mod.rs
mediator-coordination/src/model/: coord.rs  dic.rs  mod.rs
mediator-coordination/src/repository/: mod.rs  traits.rs
mediator-coordination/src/util/: mod.rs
mediator-coordination/src/web/: error.rs  handler.rs  midlw.rs  mod.rs
mediator-coordination/test/: .gitignore
mediator-coordination/test/storage/: did.json  oob_invitation.txt
mediator-server/: Cargo.toml
mediator-server/docs/: architecture.md  dic.md  drwaings.drawio  handshake.md
mediator-server/src/: constants.rs  ctx.rs  main.rs
mediator-server/src/coordinate_mediation/: models.rs
mediator-server/src/models/: mod.rs  recipient_key_record_map.rs
mediator-server/src/oob_invitation/: models.rs
mediator-server/src/utils/: mod.rs
oob-messages/: .env  Cargo.toml  README.md
oob-messages/src/: lib.rs  models.rs  plugin.rs  web.rs
oob-messages/src/util/: mod.rs
oob-messages/test/storage/: oob_invitation.txt  qrcode.txt
sample-pop-server/: .env  Cargo.toml  ISSUES.md
sample-pop-server/src/: didgen.rs  lib.rs  main.rs
sample-pop-server/src/model/: mod.rs
sample-pop-server/src/plugin/: container.rs  loader.rs  mod.rs  traits.rs
sample-pop-server/src/util/: keystore.rs  mod.rs  resolver.rs
sample-pop-server/src/web/: did.rs  index.rs  mod.rs
src/: lib.rs  (+10 more)
(+440 files in other folders)
