[package]
name = "didcomm-mediator" 
version = "0.1.0" 
authors = ["adorsys GmbH Co. KG"] 
license = "Apache-2.0"
description = "A Rust Mediator for DIDComm messaging, supporting secure and decentralized communication."
repository = "https://github.com/adorsys/didcomm-mediator-rs"
homepage = "https://github.com/adorsys/didcomm-mediator-rs/blob/main/README.md"
documentation = "https://github.com/adorsys/didcomm-mediator-rs/tree/main/docs"
keywords = ["DIDComm", "Mediator", "DIDComm Mediator", "DIDComm Mediation", "DIDCOMM Messaging", "Decentralized Identity", "Rust Mediator"]
categories = ["cryptography", "decentralized-systems"]
edition = "2021"
readme = "README.md"

[[bin]]
name = "didcomm-mediator"
path = "src/main.rs"


[workspace]
members = [
    "crates/database",
    "crates/filesystem",
    "crates/keystore",
    "crates/plugin-api",
    "crates/web-plugins/*",
    "crates/web-plugins/didcomm-messaging/did-utils",
    "crates/web-plugins/didcomm-messaging/shared",
    "crates/web-plugins/didcomm-messaging/protocols/*",
]

[workspace.dependencies]
database = { path = "./crates/database", version = "0.1.0" }
filesystem = { path = "./crates/filesystem", version = "0.1.0" }
keystore = { path = "./crates/keystore", version = "0.1.0" }
plugin-api = { path = "./crates/plugin-api", version = "0.1.0" }
did-endpoint = { path = "./crates/web-plugins/did-endpoint", version = "0.1.0" }
oob-messages = { path = "./crates/web-plugins/oob-messages", version = "0.1.0" }
didcomm-messaging = { path = "./crates/web-plugins/didcomm-messaging", version = "0.1.0" }
did-utils = { path = "./crates/web-plugins/didcomm-messaging/did-utils", version = "0.1.0" }
shared = { path = "./crates/web-plugins/didcomm-messaging/shared", version = "0.1.0" }
message-api = { path = "./crates/web-plugins/didcomm-messaging/message-api", version = "0.1.0" }
pickup = { path = "./crates/web-plugins/didcomm-messaging/protocols/pickup", version = "0.1.0" }
forward = { path = "./crates/web-plugins/didcomm-messaging/protocols/forward", version = "0.1.0" }
trust-ping = { path = "./crates/web-plugins/didcomm-messaging/protocols/trust-ping", version = "0.1.0" }
basic-message = { path = "./crates/web-plugins/didcomm-messaging/protocols/basic-message", version = "0.1.0" }
discover-features = { path = "./crates/web-plugins/didcomm-messaging/protocols/discover-features", version = "0.1.0" }
mediator-coordination = { path = "./crates/web-plugins/didcomm-messaging/protocols/mediator-coordination", version = "0.1.0" }


# Other common dependencies
serde = "1.0"
sha2 = "0.10"
cfg-if = "1.0"
getrandom = "0.2"
hyper-tls = "0.6.0"
json-patch = "3.0.1"
x25519-dalek = "2.0.1"
multibase = "0.9.1"
json-canon = "0.1.3"
qrcode = "0.14.1"
image = "0.25"
reqwest = "0.12"
tempdir = "0.3.7"
headers = "0.4"
thiserror = "2.0.7"
url = "2.5.4"
num-bigint = "0.4.6"
base64 = "0.22.1"
hex = "0.4.3"
eyre = "0.6"
anyhow = "1"
subtle = "2.6.1"
regex = "1.11.1"
mongodb = "3.1.1"
once_cell = "1.20.2"
tower = "0.5"
nix = "0.29.0"
uuid = "1.11.0"
axum = "0.7.9"
tokio = "1.42.0"
tracing = "0.1.41"
chrono = "0.4.39"
paste = "1.0"
didcomm = "0.4.1"
hyper = "1.5.2"
hyper-util = "0.1"
http-body-util = "0.1"
lazy_static = "1.5.0"
async-trait = "0.1.83"
dotenv-flow = "0.16.2"
serde_json = "1.0"
futures = "0.3"
dashmap = "6"
parking_lot = "0.12"
pin-project-lite = "0.2"
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.1"
tracing-subscriber = "0.3.19"
tower-http = "0.6.2"
axum-prometheus = "0.8.0"
base64ct = { version = "1.6.0", default-features = false }
zeroize = { version = "1.8.1", default-features = false }


[dependencies]
plugin-api.workspace = true

axum.workspace = true
dotenv-flow.workspace = true
eyre.workspace = true
thiserror.workspace = true
tracing.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
hyper.workspace = true
http-body-util.workspace = true
axum-prometheus.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["json"] }
tower-http = { workspace = true, features = ["catch-panic", "trace", "cors"] }
chrono = { workspace = true, optional = true }
did-endpoint = { workspace = true, optional = true }
oob-messages = { workspace = true, optional = true }
didcomm-messaging = { workspace = true, optional = true }
reqwest.workspace = true
mongodb = "2.0"


[features]
default = [
    "plugin-index",
    "plugin-did_endpoint",
    "plugin-oob_messages",
    "plugin-didcomm_messaging",
]

plugin-index = ["dep:chrono"]
plugin-did_endpoint = ["dep:did-endpoint"]
plugin-oob_messages = ["dep:oob-messages"]
plugin-didcomm_messaging = ["dep:didcomm-messaging"]

routing = ["plugin-didcomm_messaging", "didcomm-messaging/routing"]
pickup = ["plugin-didcomm_messaging", "didcomm-messaging/pickup"]
trust-ping = ["plugin-didcomm_messaging", "didcomm-messaging/trust-ping"]
discover-features = ["plugin-didcomm_messaging", "didcomm-messaging/discover-features"]
mediator-coordination = ["plugin-didcomm_messaging", "didcomm-messaging/mediator-coordination"]


[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
