[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
didcomm.workspace = true

lazy_static.workspace = true
mediator-coordination ={ path = "../crates/plugins/mediator-coordination" }
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full", "rt"] }

