[package]
name = "did-endpoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20" }
chrono = { version = "0.4.26" }
did-utils = { path = "../did-utils"}
dotenv-flow = "0.15.0"
generic-server = { path = "../generic-server", default-features = false }
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
multibase = { version = "0.8.0" } # earlier version due to 'did-utils'
serde_json = "1.0.104"
thiserror = "1.0.49"
tokio = { version = "1.30.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["catch-panic", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
url = { version = "2.4.0" }
uuid = { version = "1.4.1", features = ["v4"] }


[dev-dependencies]
json-canon = "0.1.3"
tempdir = "0.3.7"
tower = { version = "0.4.13", features = ["util"] }
