[package]
name = "did-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json-patch = "1.0.0"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "0.14.26", features = ["client", "http2"] }
hyper-tls = "0.5.0"
tokio = { version = "1.20.4" }
jose-b64 = { version = "0.1", default-features = false, features = ["secret"] }

# cross-platform random number generator from os
getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = "2.0.0-rc.3"
x25519-dalek = { version = "2.0.0-rc.3", features = [
    "static_secrets",
    "getrandom",
] }
curve25519-dalek = "4.0.0-rc.3"
sha2 = "0.10"

# Utilities
multibase = "0.8.0"
json-canon = "0.1.3"
async-trait = "0.1.73"
thiserror = "1.0.48"
url = "2.4.1"
num-bigint = "0.4.4"
hex = "0.4.3"
base64ct = { version = "1.6.0", default-features = false, features = ["alloc"] }
zeroize = { version = "1.6.0", default-features = false, features = ["alloc"] }
subtle = "2.5.0"

[dev-dependencies]
hyper = { version = "0.14.26", features = ["server"] }
async-std = { version = "1.12.0", features = ["attributes"] }
hex = "0.4.3"
tokio = { version = "1.27.0", default-features = false, features = [
    "macros",
    "rt",
] }
tokio-test = "0.4.2"
