[package]
name = "generic-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "generic-server"

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20" }
dotenv-flow = "0.15.0"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["catch-panic", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }

# Plugins traits
server-plugin = { path = "../server-plugin" }

# optional
chrono = { version = "0.4.26", optional = true }
did-endpoint = { path = "../did-endpoint", optional = true }
oob-messages = { path = "../oob-messages", optional = true }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }

[features]
default = ["plugin-index", "plugin-did_endpoint", "plugin-oob_messages"]

# plugins
plugin-index = ["dep:chrono"]
plugin-did_endpoint = ["dep:did-endpoint"]
plugin-oob_messages = ["dep:oob-messages"]
