[package]
name = "mediator-coordination"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["macros"] }
chrono = { version = "0.4.26" }
did-endpoint = { path = "../did-endpoint" }
did-utils = { path = "../did-utils" }
json-canon = "0.1.3"
hyper = "0.14.27"
mongodb = "2.7.1"
multibase = "0.8.0"
paste = "1.0.14"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.49"
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt"] }
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4"] }

# Plugins traits
server-plugin = { path = "../server-plugin" }

# Transitory
didcomm = { version = "0.4.1", features = ["uniffi"] }

[dev-dependencies]
dotenv-flow = "0.15.0"
tokio-test = "0.4.2"
tower = { version = "0.4.13", features = ["util"] }

[features]
default = ["stateless"]
stateless = []
