[package]
name = "didcomm-mediator-rs2"
version = "0.1.0"
edition = "2021"
authors = ["Francis Pouatcha"]
license = "Apache-2.0 OR MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

# Serde / Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"

# Axum
axum = { version = "0.6", features = ["http2"] }
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"

# Crypto
sha2 = "0.10"
hex = "0.4"
ripemd = "0.1"

#Others
lazy-regex = "2"
async-trait = "0.1"
strum = "0.24"
strum_macros = "0.24"
uuid = { version = "1", features = ["fast-rng", "v4"] }

csv = "1.1.6"
tokio-util = {version = "0.7.7", features = ["rt"]}



[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
