[package]
name = "oob-messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["fast-rng", "v4"] }
multibase = "0.9.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
