[package]
name = "oob-messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["fast-rng", "v4"] }
multibase = "0.9.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
dotenv-flow = "0.16.0"
url = { version = "2.4.0" }
axum = { version = "0.6.20" }
tracing = "0.1.37"
qrcode = "0.12.0"
image = "0.23"
base64 = "0.13.0"

# Plugins traits
server-plugin = { path = "../server-plugin" }
