[package]
name = "oob-messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["fast-rng", "v4"] }
multibase = "0.9.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
dotenv-flow = "0.16.0"
url = { version = "2.4.0" }
axum = { version = "0.6.20" }
tracing = "0.1.37"
qrcode = "0.12.0"
image = "0.23"
base64 = "0.13.0"
reqwest = "0.11"
tempdir = "0.3.7"
nix = "0.22.0"

# Plugins traits
server-plugin = { path = "../server-plugin" }
did-endpoint = { path = "../did-endpoint" }

[dev-dependencies]
tokio = { version = "1.30.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["catch-panic", "trace"] }
hyper = { version = "0.14.27", features = ["full"] }
tower = "0.4"
