[package]
name = "sample-pop-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "sample-pop-server"

[dependencies]
axum = { version = "0.6.20" }
chrono = "0.4.26"
dotenv-flow = "0.15.0"
ed25519-dalek = { version = "2.0.0", features = ["pem", "rand_core"] }
hyper = { version = "0.14.27", features = ["full"] }
json-canon = "0.1.3"
multibase = "0.9.1"
pkcs8 = { version = "0.10.2", features = ["encryption"] }
rand = "0.8.5"
rustbreak = { version = "2.0.0", features = ["yaml_enc"] }
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }

# aries_vcx
base64 = "0.21.2"
bs58 = "0.5.0"
hex = "0.4.3"
pem = "2.0.1"
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
uniresid = { version = "0.1.4", default-features = false, features = ["serde"] }
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
