[package]
name = "sample-pop-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "sample-pop-server"

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20" }
chrono = "0.4.26"
did-utils = { path = "../did-utils" }
dotenv-flow = "0.15.0"
hyper = { version = "0.14.27", features = ["full"] }
serde_json = "1.0.104"
ssi = "0.7.0"
tokio = { version = "1.30.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["catch-panic", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
url = "2.4.0"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
