[package]
name = "sample-pop-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "sample-pop-server"

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20" }
chrono = { version = "0.4.26", optional = true }
dotenv-flow = "0.15.0"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0.104"
thiserror = "1.0.49"
tokio = { version = "1.30.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["catch-panic", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }

# didpop
did-utils = { path = "../did-utils", optional = true }
multibase = { version = "0.8.0", optional = true } # earlier version due to 'did-utils'
url = { version = "2.4.0", optional = true }
uuid = { version = "1.4.1", features = ["v4"], optional = true }

[dev-dependencies]
tempdir = "0.3.7"
tower = { version = "0.4.13", features = ["util"] }
json-canon = "0.1.3"

[features]
default = ["plugin-index", "plugin-didpop"]

# plugins
plugin-index = ["dep:chrono"]
plugin-didpop = ["dep:chrono", "dep:did-utils", "dep:multibase", "dep:url", "dep:uuid"]
