[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell.workspace = true
mongodb.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
prometheus.workspace = true
tracing.workspace = true
lazy_static.workspace = true