[package]
name = "keystore"
version = "0.1.0"
edition = "2021"

[dependencies]
did-utils.workspace = true

chrono.workspace = true
serde_json.workspace = true
thiserror.workspace = true
nix.workspace = true
chacha20poly1305.workspace =true
log.workspace = true
openssl.workspace = true
jsonwebtoken.workspace = true
zeroize.workspace = true
secrecy.workspace = true

