[package]
name = "did-endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
database.workspace = true
keystore.workspace = true
plugin-api.workspace = true
did-utils.workspace = true
filesystem.workspace = true

mongodb.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde_json.workspace = true
axum = { workspace = true, features = ["macros"] }
dotenv-flow.workspace = true
hyper = { workspace = true, features = ["full"] }
multibase.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4"] }
zeroize.workspace = true

[dev-dependencies]
json-canon = "0.1.3"
shared = { workspace = true, features = ["test-utils"] }
tower = { version = "0.4.13", features = ["util"] }
