[package]
name = "mediator-coordination"
version = "0.1.0"
edition = "2021"

[dependencies]
did-utils.workspace = true
did-endpoint.workspace = true
plugin-api.workspace = true
keystore.workspace = true

async-trait.workspace = true
axum = { workspace = true, features = ["macros"] }
chrono.workspace = true
multibase.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
dotenv-flow = "0.15.0"
hyper = "0.14.27"
json-canon = "0.1.3"
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt"] }
tokio-test = "0.4.2"
tower = { version = "0.4.13", features = ["util"] }
