[package]
name = "mediator-coordination"
version = "0.1.0"
edition = "2021"

[dependencies]
did-utils.workspace = true
did-endpoint.workspace = true
plugin-api.workspace = true
keystore.workspace = true
database.workspace = true

base64.workspace = true
chrono.workspace = true
mongodb.workspace = true
async-trait.workspace = true
multibase.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
json-canon.workspace = true
didcomm = { workspace = true, features = ["uniffi"] }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros"] }
uuid = { workspace = true, features = ["v4"] }
hyper = { workspace = true, features = ["full"] }

[dev-dependencies]
dotenv-flow = "0.15.0"
hyper = "0.14.27"
json-canon = "0.1.3"
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt"] }
tokio-test = "0.4.2"
tower = { version = "0.4.13", features = ["util"] }

[features]
default = ["stateful"]
stateful = []