[package]
name = "message-pickup"
version = "0.1.0"
edition = "2021"

[dependencies]
did-utils.workspace = true
mediator-coordination.workspace = true

tracing.workspace = true
didcomm.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hyper = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros"] }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
