[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
keystore.workspace = true
did-utils.workspace = true
database.workspace = true
plugin-api.workspace = true
filesystem = { workspace = true, features = ["test-utils"] }

thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
mongodb.workspace = true
once_cell.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros"] }
didcomm = { workspace = true, features = ["uniffi"] }

[dev-dependencies]
tokio = { version = "1.27.0", default-features = false, features = [
    "macros",
    "rt",
] }
json-canon = "0.1.3"

[features]
test-utils = []
