[package]
name = "did-endpoint" 
version = "0.1.0" 
authors = ["adorsys GmbH Co. KG"] 
license = "Apache-2.0"
description = "The `did-endpoint` crate provides tools and functionalities for generating and managing Decentralized Identifiers (DIDs) and web-based interactions."
repository = "https://github.com/adorsys/didcomm-mediator-rs/tree/main/crates/web-plugins/did-endpoint"
keywords = ["did-endpoint", "didcomm", "mediator", "didcomm mediator","didcomm messaging"]
categories = ["cryptography"]
edition = "2024"

[dependencies]
database.workspace = true
keystore.workspace = true
plugin-api.workspace = true
did-utils.workspace = true
filesystem.workspace = true

cfg-if.workspace = true
mongodb.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde_json.workspace = true
dotenv-flow.workspace = true
multibase.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros"] }

[dev-dependencies]
async-trait.workspace = true
mockall = "0.13.0"
json-canon = "0.1.3"
filesystem = { workspace = true, features = ["test-utils"] }
keystore = { workspace = true, features = ["test-utils"] }
tower = { version = "0.4.13", features = ["util"] }
