[package]
name = "did-endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
database.workspace = true
keystore.workspace = true
plugin-api.workspace = true
did-utils = "0.1.0"
filesystem.workspace = true

cfg-if.workspace = true
mongodb.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde_json.workspace = true
dotenv-flow.workspace = true
multibase.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros"] }
rand = "0.8.5"

[dev-dependencies]
async-trait.workspace = true
mockall = "0.13.0"
json-canon = "0.1.3"
filesystem = { workspace = true, features = ["test-utils"] }
keystore = { workspace = true, features = ["test-utils"] }
tower = { version = "0.4.13", features = ["util"] }
