[package]
name = "did-endpoint" 
version = "0.1.0" 
authors = ["adorsys GmbH Co. KG"] 
license = "Apache-2.0"
description = "The `did-endpoint` crate provides tools and functionalities for generating and managing Decentralized Identifiers (DIDs) and web-based interactions."
repository = "https://github.com/adorsys/didcomm-mediator-rs/tree/main/crates/web-plugins/did-endpoint"
keywords = ["did-endpoint", "didcomm", "mediator", "didcomm mediator","didcomm messaging"]
categories = ["cryptography"]
edition = "2021"

[dependencies]
keystore.workspace = true
plugin-api.workspace = true
did-utils.workspace = true
database.workspace = true
async-trait.workspace = true

chrono.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
dotenv-flow.workspace = true
multibase.workspace = true
tracing.workspace = true
mongodb.workspace = true
http-body-util.workspace = true
aws-config.workspace = true
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros"] }

[dev-dependencies]
json-canon = "0.1.3"
keystore = { workspace = true, features = ["test-utils"] }
tower = { version = "0.5.2", features = ["util"] }

[features]
test-utils = []
